--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "budget-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "lite-server": "lite-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/coding-boot-camp/unit18hw.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/coding-boot-camp/unit18hw/issues"
-  },
-  "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
-  "dependencies": {
-    "compression": "^1.7.4",
-    "express": "^4.17.1",
-    "mongoose": "^5.5.15",
-    "morgan": "^1.9.1"
-  },
-  "devDependencies": {}
+    "name": "budget-tracker-pwa",
+    "version": "1.0.0",
+    "description": "Create a budget, add expenses and deposits. Fully functional offline but backed up by a cloud database.",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Qcent/budget-tracker-pwa.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Qcent/budget-tracker-pwa/issues"
+    },
+    "homepage": "https://github.com/Qcent/budget-tracker-pwa#readme",
+    "dependencies": {
+        "compression": "^1.7.4",
+        "express": "^4.17.1",
+        "mongoose": "^5.5.15",
+        "morgan": "^1.9.1"
+    }
 }
