--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/Qcent/budget-tracker-pwa#readme",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "compression": "^1.7.4",
         "express": "^4.17.1",
         "mongoose": "^5.5.15",
