--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "bcrypt": "^5.0.1",
         "compression": "^1.7.4",
         "connect-mongo": "^4.6.0",
+        "cookie-parser": "^1.4.6",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
         "mongoose": "^5.5.15",
